test-models/src/main/pegasus/com/datahub/test/invalid/InvalidSearchableFieldType.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record InvalidSearchableFieldType {
  @Searchable = {
    "fieldName": "textField",
    "fieldType": "INVALID_TYPE"
  }
  textField: string
}